# ChangeLog for net-p2p/freenet-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Mar 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_beta_pre1121.ebuild,
  +freenet-bin-0.7_beta_pre1122.ebuild:
  New upstream release

  05 Mar 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_beta_pre1119.ebuild,
  +freenet-bin-0.7_beta_pre1121.ebuild:
  New upstream release

  02 Mar 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_beta_pre1112.ebuild,
  +freenet-bin-0.7_beta_pre1119.ebuild:
  New upstream release

  19 Feb 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_beta_pre1111.ebuild,
  +freenet-bin-0.7_beta_pre1112.ebuild:
  New upstream release

  14 Feb 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_beta_pre1109.ebuild,
  +freenet-bin-0.7_beta_pre1111.ebuild:
  New upstream release

  09 Feb 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_beta_pre1108.ebuild,
  +freenet-bin-0.7_beta_pre1109.ebuild:
  New upstream release

  02 Feb 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7_alpha2.ebuild,
  +freenet-bin-0.7_beta_pre1108.ebuild:
  New upstream release

  30 Jan 2008; (Tommy[D]) tommy100@gmx.de +freenet-bin-0.7_alpha2.ebuild,
  -freenet-bin-0.7_alpha_pre1106.ebuild:
  New upstream release

  29 Jan 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_alpha_pre1105.ebuild,
  +freenet-bin-0.7_alpha_pre1106.ebuild:
  New upstream release

  27 Jan 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_alpha_pre1104.ebuild,
  +freenet-bin-0.7_alpha_pre1105.ebuild:
  New upstream release

  25 Jan 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-bin-0.7_alpha_pre1103.ebuild,
  +freenet-bin-0.7_alpha_pre1104.ebuild:
  New upstream release

  25 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1103.ebuild,
  +freenet-bin-0.7_alpha_pre1103.ebuild:
  Correct naming scheme

  25 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1101.ebuild,
  +freenet-bin-0.7.1103.ebuild:
  New upstream release
