@@ -1,8 +1,8 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
-DIST freenet-ext-19.jar 2471034 RMD160 3d3311ede517ab3929834b16d47b76d88f2e5c79 SHA1 97d2bde044d22f2ee63facb136e338b58cd2e61a SHA256 68dbe406e179792672632a24b807245819406a10c6e19f1394fb177b062e1f29
-DIST freenet-r18438-snapshot.jar 2488719 RMD160 8305592698a0af49afe524ba3b26f0b2418acabf SHA1 15ac6581d7e43aab83ceec7043d3209312901bbd SHA256 ddcf68d86f26cab3ec54e7e2faf70b4a8cee9b9bc8240d7a79a54d83095b9c2a
+DIST freenet-ext-20.jar 2476820 RMD160 1b439b005a36937d23e8af9f19c5c74fba31396b SHA1 0dfc6c173e36e5311674856e375d5fddf2e862c7 SHA256 83384335953d6c6515e6b88858b8f26c25d46345b8a245ff5a9bbdd613fdd8a7
+DIST freenet-r18509-snapshot.jar 2492848 RMD160 1caa71e16111158f9c2c80d914c5a111aa29aa6b SHA1 e0ef0cb4e6f31cce75be8c3446f7ada6a44e03ee SHA256 47a196cfcfc52349c6e8551a21cc5fea7b9135989703591fc91c4682ed37853b
 DIST freenet07.tar.gz 380903 RMD160 216fc44016efa6a19291d74cb2a46cb005efbb86 SHA1 0d86e6516daeee9aec9b1a67eb06a3e8953ed3c6 SHA256 0c225694d4c3c81f62ac07fc5004196fbf7807b946dbed63740fdbc77f631513
-DIST seednodes-20080305.fref 27833 RMD160 939a61768297a351c6819bf4a0f4f6fabf47eddd SHA1 0080ca9950563fd47bd7339541a38e1fd13b6d15 SHA256 c85ea5081c9ed169584cf2474e5668ccaa603b990052d9d765a5e5a76dde40a9
-EBUILD freenet-bin-0.7_beta_pre1122.ebuild 2634 RMD160 35e8b4df549e4d0ebee816a0d49ec9b17fec2d3d SHA1 1272bd0eade09f933a3d512ec55cbddb134459de SHA256 c9bc8327fe11ba3ae922cdd0728986c9a58d6f3b56a96194a4921f18b624536e
-MISC ChangeLog 7043 RMD160 f75f1112391d294a7327a2945e72a7e4db5ac579 SHA1 dd0b31068c411655628c2befd2bcc02654d78285 SHA256 7e4f5758b23c0ee28cb32f9dd7e878146ec1b158c679356795df82ac368f7dae
+DIST seednodes-20080313.fref 27535 RMD160 2883314b483bd98097339b0a3467a5e45674c79d SHA1 a7de43731736ac71c86c7a350512a8f76ac8e9fe SHA256 311c85ede543ded625d981e836fa8e7774e659904de79cdf6a625a8cdab3453e
+EBUILD freenet-bin-0.7_beta_pre1123.ebuild 2634 RMD160 322da56c694907aad39fa87325468c00e9c14634 SHA1 6daa37a4cd4ba8de424502840fc5d605d032a7b8 SHA256 ffba5137090223e7f30b09d84220e36686bdf7719e94015f72e8eac9d8d3ce6b
+MISC ChangeLog 7189 RMD160 a7dce5c71695e0d2f935d0906fdce379a63c99de SHA1 aea922ac58db1aafebabcb1ba87dadf340914cad SHA256 1f5d5aa4ec9f73011d8e27d4d4b960b936df344c020b27cf96155b1f5b0b2ee5
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
